--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
-		"vite-plugin-eslint2": "^5.0.3",
-		"vite-plugin-pwa": "^1.0.0"
+		"vite-plugin-eslint2": "^5.0.3"
 	}
 }
