--- a/static/manifest.json
+++ b/static/manifest.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "background_color": "#000000",
     "theme_color": "#000000",
-    "display_override": ["fullscreen"],
+    "display_override": ["fullscreen", "standalone"],
     "icons": [
         {
             "src": "/icons/icon-192x192.png",
