--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,11 +2,10 @@
     "name": "Do Things",
     "short_name": "Do Things",
     "start_url": "/",
-    "display": "fullscreen",
+    "display": "standalone",
     "orientation": "portrait",
-    "background_color": "#000000",
-    "theme_color": "#000000",
-    "display_override": ["fullscreen", "standalone"],
+    "background_color": "#4785FF",
+    "theme_color": "#4785FF",
     "icons": [
         {
             "src": "/icons/icon-192x192.png",
