--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vite-plugin-eslint2": "^5.0.3"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.8",
+		"date-fns": "^4.1.0",
+		"tailwindcss": "^4.1.8"
 	}
 }
