--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"vite-plugin-eslint2": "^5.0.3"
 	},
 	"dependencies": {
+		"@mdi/js": "^7.4.47",
 		"@tailwindcss/vite": "^4.1.8",
 		"date-fns": "^4.1.0",
 		"tailwindcss": "^4.1.8"
