--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
+		"sass": "^1.89.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -36,8 +37,6 @@
 	},
 	"dependencies": {
 		"@mdi/js": "^7.4.47",
-		"@tailwindcss/vite": "^4.1.8",
-		"date-fns": "^4.1.0",
-		"tailwindcss": "^4.1.8"
+		"date-fns": "^4.1.0"
 	}
 }
